--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "outDir": "dist/types",
     "declaration": true,
-    "sourceMap": true,
+    "sourceMap": true
   },
   "include": ["src"]
 }
