--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,11 @@
   "type": "module",
   "author": "zhensherlock",
   "homepage": "https://github.com/zhensherlock/quick-launch-url/tree/master/packages/shared#readme",
-  "keywords": ["quick-launch", "quick-launch-url", "typescript"],
+  "keywords": [
+    "quick-launch",
+    "quick-launch-url",
+    "typescript"
+  ],
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "publishConfig": {
@@ -13,7 +17,11 @@
     "access": "public"
   },
   "license": "MIT",
-  "files": ["dist", "LICENSE", "README.md"],
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zhensherlock/quick-launch-url.git"
