chore: update dependencies

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,8 +11,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "tailwindcss": "^4.1.18",
     "vitepress": "^2.0.0-alpha.15",
     "vitepress-plugin-group-icons": "^1.6.5",
     "vitepress-plugin-llms": "^1.10.0"
+  },
+  "dependencies": {
+    "@quick-launch-url/core": "workspace:*",
+    "vue": "^3.5.26"
   }
 }
